# ESG_Reporting

./: .coverage  .eslintrc.js  .gitignore  README.md  docker-compose.yml  jest.config.js  jest.setup.ts  package-lock.json  package.json  pytest.ini  requirements.txt
.cursor/: chatbot-integration.mdc  db.mdc  esg-standards.mdc  mcp.json
.github/: pull_request_template.md
.husky/: pre-commit  (+1 more)
SaaSFactory/apps/QuoteAssistant/: .gitignore  .replit  config.py  index.html  main.py  package-lock.json  package.json  pyproject.toml  replit_zip_error_log.txt  requirements.txt  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1726784796466.mjs  vite.config.ts.timestamp-1727731804782.mjs
SaaSFactory/apps/QuoteAssistant/.upm/: store.json
SaaSFactory/apps/QuoteAssistant/Assistants/Process_Agent/Quote Generator/: Quote Generator.json  instructions.txt
SaaSFactory/apps/QuoteAssistant/Assistants/files_meta/: meta.json
SaaSFactory/apps/QuoteAssistant/Helpers/: assistants_helper_functions.py  generate_pdf.py  openai_helper_functions.py  tools_helper_function.py
SaaSFactory/apps/QuoteAssistant/Testing_zone/: Readme.txt  test_me.py  testing_auth.py
SaaSFactory/apps/QuoteAssistant/src/: App.css  App.tsx  firebase.ts  index.css  index.tsx  logger.ts
SaaSFactory/apps/QuoteAssistant/src/components/: BottomTabBar.tsx  Chat.tsx  Home.tsx  Profile.tsx  SignIn.tsx
SaaSFactory/apps/QuoteAssistant/templates/: index.html  login.html
SaaSFactory/apps/QuoteAssistant/tools/: airtable_operations copy.py  airtable_operations.py  firebase_operations.py
(+401 files in other folders)
